Add query modes base + specific section / resource search (#71)
relates to

whiletrue-industries/botnim#47
whiletrue-industries/botnim#48
whiletrue-industries/botnim#49
